@@ -28,8 +28,9 @@ no_index:
     - xt
 requires:
   Mo: 0
-  Mo::utils: 0.28
+  Mo::utils: 0.21
   Mo::utils::Email: 0
+  Mo::utils::Number: 0
   perl: 5.8.0
 resources:
   bugtracker: https://github.com/michal-josef-spacek/Data-Person/issues
