@@ -44,8 +44,8 @@ eval {
 		'id' => 'bad',
 	);
 };
-is($EVAL_ERROR, "Parameter 'id' must be a natural number.\n",
-	"Parameter 'id' must be a natural number (bad).");
+is($EVAL_ERROR, "Parameter 'id' must be a positive natural number.\n",
+	"Parameter 'id' must be a positive natural number (bad).");
 clean();
 
 # Test.
